# data-lake-project

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dbt  Dockerfile.spark  README.md  ROADMAP.md  config.py  dependencies_to_add.md  docker-compose.yml  main.py  pyproject.toml  pyspark_deps.py  testing_eda.ipynb
.github/workflows/: ci.yml
dbt/: dbt_project.yml  profiles.yml
docs/architecture/: ingestion.mmd  overview.mmd  transforms.mmd
docs/file_docs/: activity_heatmap_marts_script.md  airflow_DAGs_docs.md  bootstrap_historical.md  bronze_to_silver.md  cli_commands_bootstrap.md  cli_commands_run_layers.md  config_docs.md  consumer_docs.md  dbt_commands.md  dbt_theory_docs.md  docker_compose_docs.md  docker_run_commands.md  github_producer_topic_visual.md  grafana_dashboard_docs.md  grafana_serving_layer_docs.md  incremental_reading.md  kafka_consumer_docs.md  kafka_producer_docs.md  pandas_porting_pyspark.md  porting_pandas_pyspark.md  pr_cycle_times_marts_script.md  producer_docs.md  run_pipeline_script.md  serving_layer_docs.md  silver_to_gold.md  stg_github_events.md  testing_bronze_to_silver.md  tool_growth_marts_script.md
docs/session_tracking/: session_001.md  sessions_MvP_V1.md  sessions_MvP_V2.md  sessions_MvP_V3.MD
docs/visuals/: KRaft_kafka_visual.mmd  bootstrap_historical_visual.mmd  bronze_to_silver_visual.mmd  consumer_visual.mmd  (+1 more)
ingestion/: consumer.py  producer.py
scripts/: bootstrap_historical.py  run_pipeline.py
tests/: eda_own_data.ipynb  test_transforms.py
transforms/: bronze_to_silver.py  silver_to_gold.py
(+7 files in other folders)
