[project]
name = "data-lake-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.13.2",
    "loguru>=0.7.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
]
